@@ -1,7 +1,8 @@
 
 Changes in JMurmel-1.2 relative to JMurmel-1.1
 
- * changed behaviour around large numbers
+ * changed behaviour around large numbers, no more silently cutting off decimal places
+   when an integral number is needed
  * changed argument to sleep to "seconds" (was: internal-time-units-per-second),
    changed return value to nil (was: actually slept time in internal-time-units-per-second)
  * changed "apply" from a special form to a function, "apply" no longer is a reserved word,
